kubernetes/scalelite-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: scalelite-ns
  name: scalelite
spec:
  selector:
    app: scalelite
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
